--- a/src/App.css
+++ b/src/App.css
@@ -6,15 +6,12 @@ body {
   background-image: url('mouth.png');
   background-repeat: no-repeat;
   background-position: center;
-  background-size: cover;
+  background-size: contain;
 }
 #defaultCanvas0 {
   z-index: -1;
   position: absolute;
-}
-
-.App {
-  margin: 5%;
+  height: 90vh !important;
 }
 
 section {
@@ -25,19 +22,17 @@ section {
 .Nav-header {
   text-align: left;
   color: white;
-  /* overflow: hidden; */
-  position: fixed; /* Set the navbar to fixed position */
-  top: 0; /* Position the navbar at the top of the page */
-  width: 100%; /* Full width */
+  top: 0;
+  width: 100%;
   padding: 14px 16px;
 }
 .App-about {
-  text-align: left;
+  margin: 5%;
 }
-
 .App-about h1 {
   font-size: 60px;
   margin-bottom: 0;
+  text-align: left;
 }
 .App-about h2 {
   font-size: 30px;
@@ -49,16 +44,8 @@ section {
 }
 .social-links i {
   color: white;
+  font-size: 15px;
   padding-right: 10px;
-}
-
-.crumbs-image {
-  background-image: url("crumbs.png");
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
 }
 
 .App-header {
@@ -74,13 +61,4 @@ section {
 
 .App-link {
   color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
 }
