--- a/src/App.css
+++ b/src/App.css
@@ -19,6 +19,11 @@ section {
   color: white
 }
 
+.Nav {
+  display: inline-flex;
+  width: 100%;
+
+}
 .Nav-header {
   text-align: left;
   color: white;
@@ -33,12 +38,19 @@ section {
   text-align: right;
   margin: -10px 20px;
 }
+
+.trash {
+  width: 40px;
+  height: 40px;
+  margin-left: 1.5%;
+}
+
 .App-about {
-  margin: 4%;
+  margin: 0% 4% 0 4%;
 }
 .App-about h1 {
   font-size: 60px;
-  margin-bottom: 0;
+  margin: 0;
   text-align: left;
 }
 .App-about h2 {
